feat: redesign bazaar item info screen